se corrigio bug al agregar y/o modificar muestreo

--- a/app/views/reception/receptionManage.html
+++ b/app/views/reception/receptionManage.html
@@ -55,6 +55,7 @@
                             <th>Productor</th>
                             <th>Campo</th>
                             <th>Variedad</th>
+                            <th>Estado</th>
                             <th>Camion/Placas</th>
                             <th>Recibido</th>
                             <th>Cilindro</th>
@@ -72,6 +73,7 @@
                             <td>{{reception.ProducerName}}</td>
                             <td>{{reception.FieldName}}</td>
                             <td>{{reception.Variety}}</td>
+                            <td>{{reception.Active}}</td>
                             <td>{{reception.CarRegistration}}</td>
                             <td>{{reception.ReceivedFromField}}</td>
                             <td>{{reception.Cylinder}}</td>
