Bug de copy paste en reporte de salidas de segunda

--- a/app/views/report/grill/secondGrillIssues.html
+++ b/app/views/report/grill/secondGrillIssues.html
@@ -8,7 +8,7 @@
                 <button class="btn btn-link" ng-click="secondGrillIssuesExportPdf()">
                     <span class="glyphicon glyphicon-share"></span> Exportar PDF
                 </button>
-                <button class="btn btn-link" onclick="selectElementContents(document.getElementById('grillIssues'))">
+                <button class="btn btn-link" onclick="selectElementContents(document.getElementById('secondGsrillIssues'))">
                     <span class="glyphicon glyphicon-share"></span> Copiar Reporte
                 </button>
                 <body>
