--- a/app/views/report/dailyReport.html
+++ b/app/views/report/dailyReport.html
@@ -40,7 +40,7 @@
                 <button class="btn btn-link" value="select genericReport" onclick="selectElementContents(document.getElementById('daily'))">
                     <span class="glyphicon glyphicon-share"></span> Copiar Reporte
             </button>
-                <table id="daily" class="table table-striped table-bordered table-condensed table-hover">
+                <table id="daily" class="table table-striped table-bordered table-condensed table-hover" style="height: 400px;" fixed-header>
                     <thead>
                         <tr>
                             <th>Fecha</th>
@@ -58,14 +58,14 @@
                     </thead>
                     <tbody>
                         <tr ng-repeat="report in dailyProcess">
-                            <td>{{report.Date | date:'dd/MM/yyyy HH:mm' }}</td>
+                            <td>{{report.Date | date:'dd/MM/yyyy' }}</td>
                             <td>{{report.Producer}}</td>
                             <td>{{report.Folio}}</td>
                             <td>{{report.Cylinder}}</td>
                             <td>{{report.Variety}}</td>
                             <td>{{report.SacksFirstLarge}}</td>
                             <td>{{report.SacksFirstMedium}}</td>
-                            <td>{{report.SacksFirstLarge}}</td>
+                            <td>{{report.SacksFirstSmall}}</td>
                             <td>{{report.Total}}</td>
                             <td>{{report.QualityPercent}}</td>
                             <td>{{report.Germinated}}</td>
