--- a/app/views/report/genericReport.html
+++ b/app/views/report/genericReport.html
@@ -24,7 +24,7 @@
                 <button class="btn btn-link" value="select genericReport" onclick="selectElementContents(document.getElementById('genericReport'))">
                     <span class="glyphicon glyphicon-share"></span> Copiar Reporte
             </button>
-                <table id="genericReport" class="table table-striped table-bordered table-condensed table-hover">
+                <table id="genericReport" class="table table-striped table-bordered table-condensed table-hover" style="height: 400px;" fixed-header>
                     <thead>
                         <tr>
                             <th>No. Parrilla</th>
