--- a/app/views/report/grill/reportingProcess.html
+++ b/app/views/report/grill/reportingProcess.html
@@ -12,7 +12,7 @@
                 <button class="btn btn-link" value="select genericReport" onclick="selectElementContents(document.getElementById('reportingProcess'))">
                     <span class="glyphicon glyphicon-share"></span> Copiar Reporte
             </button>
-                <table id="reportingProcess" class="table table-striped table-bordered table-condensed table-hover">
+                <table id="reportingProcess" class="table table-striped table-bordered table-condensed table-hover" style="height: 400px;" fixed-header>
                     <thead>
                         <tr>
                             <th>Variedad</th>
