--- a/app/views/report/producerReport.html
+++ b/app/views/report/producerReport.html
@@ -30,7 +30,7 @@
                 <button class="btn btn-link" value="select genericReport" onclick="selectElementContents(document.getElementById('producerReport'))">
                     <span class="glyphicon glyphicon-share"></span> Copiar Reporte
             </button>
-                <table id="producerReport" class="table table-striped table-bordered table-condensed table-hover">
+                <table id="producerReport" class="table table-striped table-bordered table-condensed table-hover" style="height: 400px;" fixed-header>
                     <thead>
                         <tr>
                             <th>Remisión</th>
