--- a/app/views/report/reportOrigin.html
+++ b/app/views/report/reportOrigin.html
@@ -12,7 +12,7 @@
                 <button class="btn btn-link" value="select genericReport" onclick="selectElementContents(document.getElementById('originReportTable'))">
                     <span class="glyphicon glyphicon-share"></span> Copiar Reporte
                 </button>
-                <table id="originReportTable" class="table table-striped table-bordered table-condensed table-hover">
+                <table id="originReportTable" class="table table-striped table-bordered table-condensed table-hover" style="height: 400px;" fixed-header>
                     <thead>
                         <tr>
                             <th></th>
