se corrigio bug que no mostraba la huerta en parrillas

--- a/app/views/report/genericReport.html
+++ b/app/views/report/genericReport.html
@@ -36,7 +36,7 @@
                             <th>Calidad</th>
                             <th>Variedad</th>
                             <th>Productor</th>
-                            <th>Campo</th>
+                            <th>Huerta/Lote</th>
                             <th>Peso</th>
                             <th>% Humedad</th>
                             <th>No. Nueces</th>
@@ -55,7 +55,7 @@
                             <td>{{grill.Quality}}</td>
                             <td>{{grill.Variety}}</td>
                             <td>{{grill.Producer}}</td>
-                            <td>{{grill.FieldName}}</td>
+                            <td>{{grill.Batch}}</td>
                             <td>{{grill.SampleWeight}}</td>
                             <td>{{grill.HumidityPercent}}</td>
                             <td>{{grill.WalnutNumber}}</td>
