--- a/app/views/report/grill/grillIssuesReport.html
+++ b/app/views/report/grill/grillIssuesReport.html
@@ -49,7 +49,7 @@
                             <td>{{grill.Quality}}</td>
                             <td>{{grill.Variety}}</td>
                             <td>{{grill.Producer}}</td>
-                            <td>{{grill.FieldName}}</td>
+                            <td>{{grill.Batch}}</td>
                             <td>{{grill.SampleWeight}}</td>
                             <td>{{grill.HumidityPercent}}</td>
                             <td>{{grill.WalnutNumber}}</td>
