--- a/app/views/report/grill/secondGrillIssues.html
+++ b/app/views/report/grill/secondGrillIssues.html
@@ -45,7 +45,7 @@
                             <td>{{grill.Kilos}}</td>
                             <td>{{grill.Variety}}</td>
                             <td>{{grill.Producer}}</td>
-                            <td>{{grill.FieldName}}</td>
+                            <td>{{grill.Batch}}</td>
                             <td>{{grill.SampleWeight}}</td>
                             <td>{{grill.HumidityPercent}}</td>
                             <td>{{grill.WalnutNumber}}</td>
