--- a/app/views/grill/grillCurrentInv.html
+++ b/app/views/grill/grillCurrentInv.html
@@ -31,7 +31,7 @@
                             <th>Calidad</th>
                             <th>Variedad</th>
                             <th>Productor</th>
-                            <th>Campo</th>
+                            <th>Huerta/Lote</th>
                             <th>Peso de la Muestra</th>
                             <th>Humedad</th>
                             <th>No.Nueces por Kilo</th>
@@ -51,7 +51,7 @@
                             <td>{{grill.Quality}}</td>
                             <td>{{grill.Variety}}</td>
                             <td>{{grill.Producer}}</td>
-                            <td>{{grill.FieldName}}</td>
+                            <td>{{grill.Batch}}</td>
                             <td>{{grill.SampleWeight}}</td>
                             <td>{{grill.HumidityPercent}}</td>
                             <td>{{grill.WalnutNumber}}</td>
