--- a/app/views/grill/grillIssue.html
+++ b/app/views/grill/grillIssue.html
@@ -97,7 +97,7 @@
                                                 <th>Calidad</th>
                                                 <th>Variedad</th>
                                                 <th>Productor</th>
-                                                <th>Campo</th>
+                                                <th>Huerta/Lote</th>
                                                 <th>Peso de la Muestra</th>
                                                 <th>Humedad</th>
                                                 <th>No.Nueces por Kilo</th>
@@ -117,7 +117,7 @@
                                                 <td>{{grill.Quality}}</td>
                                                 <td>{{grill.Variety}}</td>
                                                 <td>{{grill.Producer}}</td>
-                                                <td>{{grill.FieldName}}</td>
+                                                <td>{{grill.Batch}}</td>
                                                 <td>{{grill.SampleWeight}}</td>
                                                 <td>{{grill.HumidityPercent}}</td>
                                                 <td>{{grill.WalnutNumber}}</td>
@@ -189,7 +189,7 @@
                                         <td>{{grill.Quality}}</td>
                                         <td>{{grill.Variety}}</td>
                                         <td>{{grill.Producer}}</td>
-                                        <td>{{grill.FieldName}}</td>
+                                        <td>{{grill.Batch}}</td>
                                         <td>{{grill.SampleWeight}}</td>
                                         <td>{{grill.HumidityPercent}}</td>
                                         <td>{{grill.WalnutNumber}}</td>
