--- a/app/views/report/grill/secondGrillCurrentInv.html
+++ b/app/views/report/grill/secondGrillCurrentInv.html
@@ -34,7 +34,7 @@
                             <th>Kilos</th>
                             <th>Variedad</th>
                             <th>Productor</th>
-                            <th>Campo</th>
+                            <th>Huerta/Lote</th>
                             <th>Peso</th>
                             <th>% Humedad</th>
                             <th>No. Nueces</th>
@@ -51,7 +51,7 @@
                             <td>{{grill.Kilos}}</td>
                             <td>{{grill.Variety}}</td>
                             <td>{{grill.Producer}}</td>
-                            <td>{{grill.FieldName}}</td>
+                            <td>{{grill.Batch}}</td>
                             <td>{{grill.SampleWeight}}</td>
                             <td>{{grill.HumidityPercent}}</td>
                             <td>{{grill.WalnutNumber}}</td>
