Sticky Headers a todas las tablas a excepcion de SALIDAS

--- a/app/views/grill/grillIssue.html
+++ b/app/views/grill/grillIssue.html
@@ -60,7 +60,7 @@
                                 <div class="form-group fg-line">
                                     <div class="btn-demo">
                                         <button id="btnAddGrill" class="btn btn-success waves-effect" type="button" data-toggle="collapse" data-target="#collapseExample"
-                                            aria-expanded="false" aria-controls="collapseExample">Agregar Parrillass
+                                            aria-expanded="false" aria-controls="collapseExample">Agregar Parrillas
                                         </button>
                                     </div>
                                 </div>
