--- a/app/views/cylinder.html
+++ b/app/views/cylinder.html
@@ -43,7 +43,7 @@
                 <button class="btn btn-link" ng-click="generatePDF()">
                 <span class="glyphicon glyphicon-share"></span>Exportar PDF
             </button>
-                <table id="cylinderTable" class="table table-striped table-bordered table-condensed table-hover">
+                <table id="cylinderTable" class="table table-striped table-bordered table-condensed table-hover" style="height: 400px;" fixed-header>
                     <thead>
                         <tr>
                             <th>Cilindro</th>
