--- a/app/views/humidity/humidityLastSamplings.html
+++ b/app/views/humidity/humidityLastSamplings.html
@@ -14,7 +14,7 @@
                         </div>
                     </div>
                 </div>
-                <table id="data-table-command" class="table table-striped table-bordered table-condensed table-hover">
+                <table id="data-table-command" class="table table-striped table-bordered table-condensed table-hover" style="height: 400px;" fixed-header>
                     <thead>
                         <tr>
                             <td>Cilindro</td>
