--- a/app/views/reception/receptionManage.html
+++ b/app/views/reception/receptionManage.html
@@ -47,7 +47,7 @@
                 <button class="btn btn-link" ng-click="generatePDF()">
                 <span class="glyphicon glyphicon-share"></span>Exportar PDF
             </button>
-                <table id="receptionTable" class="table table-striped table-bordered table-condensed table-hover">
+                <table id="receptionTable" class="table table-striped table-bordered table-condensed table-hover" style="height: 400px;" fixed-header>
                     <thead>
                         <tr>
                             <th>Folio</th>
