--- a/app/views/report/grill/grillIssuesReport.html
+++ b/app/views/report/grill/grillIssuesReport.html
@@ -11,7 +11,7 @@
                 <button class="btn btn-link" onclick="selectElementContents(document.getElementById('grillIssues'))">
                     <span class="glyphicon glyphicon-share"></span> Copiar Reporte
                 </button>
-                <table id="grillIssues" class="table table-striped table-bordered table-condensed table-hover">
+                <table id="grillIssues" class="table table-striped table-bordered table-condensed table-hover" style="height: 400px;" fixed-header>
                     <thead>
                         <tr>
                             <th>No. de Parrilla</th>
