--- a/app/views/report/reportOrigin.html
+++ b/app/views/report/reportOrigin.html
@@ -15,20 +15,12 @@
                 <table id="originReportTable" class="table table-striped table-bordered table-condensed table-hover" style="height: 400px;" fixed-header>
                     <thead>
                         <tr>
-                            <th></th>
-                            <th></th>
-                            <th colspan="{{reportOriginFirst.Varieties.length}}">Total en Variedades</th>
-                            <th></th>
-                            <th></th>
-                            <th colspan="{{reportOriginFirst.Varieties.length}}">Rendimiento por Variedad</th>
-                        </tr>
-                        <tr>
                             <th rowspan="2">Huerta</th>
                             <th rowspan="2">Hectareas</th>
-                            <th ng-repeat="variety in reportOriginFirst.Varieties">{{variety.Variety}}</th>
+                            <th ng-repeat="variety in reportOriginFirst.Varieties">{{variety.Variety}}(Sacos)</th>
                             <th rowspan="2">Produccion Total</th>
                             <th>Rendimiento / Ha</th>
-                            <th ng-repeat="variety in reportOriginFirst.Varieties">{{variety.Variety}}</th>
+                            <th ng-repeat="variety in reportOriginFirst.Varieties">{{variety.Variety}}(R%)</th>
                         </tr>
                     </thead>
                     <tbody>
