--- a/app/views/users.html
+++ b/app/views/users.html
@@ -83,7 +83,7 @@
                 <button class="btn btn-link" ng-click="generatePDF()">
                 <span class="glyphicon glyphicon-share"></span>Exportar PDF
             </button>
-                <table id="userTable" class="table table-striped table-bordered table-condensed table-hover">
+                <table id="userTable" class="table table-striped table-bordered table-condensed table-hover" style="height: 400px;" fixed-header>
                     <thead>
                         <tr>
                             <th data-column-id="id">Nombre</th>
