--- a/app/views/reception/receptionManage.html
+++ b/app/views/reception/receptionManage.html
@@ -53,7 +53,7 @@
                             <th>Folio</th>
                             <th>Remisiones</th>
                             <th>Productor</th>
-                            <th>Campo</th>
+                            <th>Huerta/Lote</th>
                             <th>Variedad</th>
                             <th>Estado</th>
                             <th>Camion/Placas</th>
