--- a/app/views/grill/grillCurrentInv.html
+++ b/app/views/grill/grillCurrentInv.html
@@ -31,6 +31,7 @@
                             <th>Calidad</th>
                             <th>Variedad</th>
                             <th>Productor</th>
+                            <th>Campo</th>
                             <th>Huerta/Lote</th>
                             <th>Peso de la Muestra</th>
                             <th>Humedad</th>
@@ -51,6 +52,7 @@
                             <td>{{grill.Quality}}</td>
                             <td>{{grill.Variety}}</td>
                             <td>{{grill.Producer}}</td>
+                            <td>{{grill.Field}}</td>
                             <td>{{grill.Batch}}</td>
                             <td>{{grill.SampleWeight}}</td>
                             <td>{{grill.HumidityPercent}}</td>
