--- a/app/views/grill/grillIssue.html
+++ b/app/views/grill/grillIssue.html
@@ -162,6 +162,7 @@
                                         <th>Calidad</th>
                                         <th>Variedad</th>
                                         <th>Productor</th>
+                                        <th>Campo</th>
                                         <th>Huerta/Lote</th>
                                         <th>Peso de la Muestra</th>
                                         <th>% Humedad</th>
@@ -189,6 +190,7 @@
                                         <td>{{grill.Quality}}</td>
                                         <td>{{grill.Variety}}</td>
                                         <td>{{grill.Producer}}</td>
+                                        <td>{{grill.Field}}</td>
                                         <td>{{grill.Batch}}</td>
                                         <td>{{grill.SampleWeight}}</td>
                                         <td>{{grill.HumidityPercent}}</td>
