--- a/app/views/grill/grillUpdate.html
+++ b/app/views/grill/grillUpdate.html
@@ -31,7 +31,15 @@
                     <label for="fieldF" class="col-sm-2 control-label">Campo *</label>
                     <div class="col-sm-10">
                         <div class="fg-line select">
-                            <select id="fieldF" class="form-control" ng-model="grill.Field" ng-options="field.FieldName for field in fields"></select>
+                            <select id="fieldF" class="form-control" ng-model="grill.Field" ng-options="field.FieldName for field in fields" ng-change="getBatchInCurrentField(grill.Field)"></select>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="batchF" class="col-sm-2 control-label">Huerta/Lote *</label>
+                    <div class="col-sm-10">
+                        <div class="fg-line select">
+                            <select id="batchF" class="form-control" ng-model="grill.Batch" ng-options="batch.Batch for batch in batches"></select>
                         </div>
                     </div>
                 </div>
