--- a/app/views/report/grill/secondGrillCurrentInv.html
+++ b/app/views/report/grill/secondGrillCurrentInv.html
@@ -34,6 +34,7 @@
                             <th>Kilos</th>
                             <th>Variedad</th>
                             <th>Productor</th>
+                            <th>Campo</th>
                             <th>Huerta/Lote</th>
                             <th>Peso</th>
                             <th>% Humedad</th>
@@ -51,6 +52,7 @@
                             <td>{{grill.Kilos}}</td>
                             <td>{{grill.Variety}}</td>
                             <td>{{grill.Producer}}</td>
+                            <td>{{grill.Field}}</td>
                             <td>{{grill.Batch}}</td>
                             <td>{{grill.SampleWeight}}</td>
                             <td>{{grill.HumidityPercent}}</td>
