--- a/app/views/report/grill/secondGrillIssues.html
+++ b/app/views/report/grill/secondGrillIssues.html
@@ -21,6 +21,7 @@
                             <th>Kilos</th>
                             <th>Variedad</th>
                             <th>Productor</th>
+                            <th>Campo</th>
                             <th>Huerta/Lote</th>
                             <th>Peso de la Muestra</th>
                             <th>% Humedad</th>
@@ -45,6 +46,7 @@
                             <td>{{grill.Kilos}}</td>
                             <td>{{grill.Variety}}</td>
                             <td>{{grill.Producer}}</td>
+                            <td>{{grill.Field}}</td>
                             <td>{{grill.Batch}}</td>
                             <td>{{grill.SampleWeight}}</td>
                             <td>{{grill.HumidityPercent}}</td>
