--- a/app/views/report/dailyReport.html
+++ b/app/views/report/dailyReport.html
@@ -33,6 +33,18 @@
         </div>
         <div class="card-body card-padding">
             <div class="table-responsive">
+                <div class="row">
+                    <div class="col-sm-12 actionbar">
+                        <div class="form-group">
+                            <label for="isearch" class="col-sm-2 control-label">Buscar</label>
+                            <div class="col-sm-12">
+                                <div class="fg-line">
+                                    <input type="text" class="form-control input-sm" id="isearch" placeholder="buscar...." data-ng-model="reportSearch">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <hr>
                 <button class="btn btn-link" ng-click="dailyExportPdf()">
                     <span class="glyphicon glyphicon-share"></span> Exportar PDF
@@ -40,6 +52,7 @@
                 <button class="btn btn-link" value="select genericReport" onclick="selectElementContents(document.getElementById('daily'))">
                     <span class="glyphicon glyphicon-share"></span> Copiar Reporte
             </button>
+            <hr>
                 <table id="daily" class="table table-striped table-bordered table-condensed table-hover" style="height: 400px;" fixed-header>
                     <thead>
                         <tr>
@@ -57,7 +70,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr ng-repeat="report in dailyProcess">
+                        <tr ng-repeat="report in dailyProcess | filter:reportSearch">
                             <td>{{report.Date | date:'dd/MM/yyyy' }}</td>
                             <td>{{report.Producer}}</td>
                             <td>{{report.Folio}}</td>
