--- a/app/views/report/genericReport.html
+++ b/app/views/report/genericReport.html
@@ -11,7 +11,7 @@
                             <label for="isearch" class="col-sm-2 control-label">Buscar</label>
                             <div class="col-sm-12">
                                 <div class="fg-line">
-                                    <input type="text" class="form-control input-sm" id="isearch" placeholder="buscar...." data-ng-model="searchGrillReport">
+                                    <input type="text" class="form-control input-sm" id="isearch" placeholder="buscar...." data-ng-model="searchReport">
                                 </div>
                             </div>
                         </div>
@@ -24,6 +24,7 @@
                 <button class="btn btn-link" value="select genericReport" onclick="selectElementContents(document.getElementById('genericReport'))">
                     <span class="glyphicon glyphicon-share"></span> Copiar Reporte
             </button>
+            <hr>
                 <table id="genericReport" class="table table-striped table-bordered table-condensed table-hover" style="height: 400px;" fixed-header>
                     <thead>
                         <tr>
@@ -46,7 +47,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr ng-repeat="grill in genericGrillReport | filter:searchGrillReport">
+                        <tr ng-repeat="grill in genericGrillReport | filter:searchReport">
                             <td>{{grill.Folio}}</td>
                             <td>{{grill.DateCapture | date:'dd/MM/yyyy HH:mm'}}</td>
                             <td>{{grill.Receptions}}</td>
