--- a/app/views/report/grill/grillIssuesReport.html
+++ b/app/views/report/grill/grillIssuesReport.html
@@ -5,13 +5,27 @@
         </div>
         <div class="card-body card-padding">
             <div class="table-responsive">
+                <div class="row">
+                    <div class="col-sm-12 actionbar">
+                        <div class="form-group">
+                            <label for="isearch" class="col-sm-2 control-label">Buscar</label>
+                            <div class="col-sm-12">
+                                <div class="fg-line">
+                                    <input type="text" class="form-control input-sm" id="isearch" placeholder="buscar...." data-ng-model="searchGrillIssueReport">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <hr>
                 <button class="btn btn-link" ng-click="grillIssuesExportPdf()">
                     <span class="glyphicon glyphicon-share"></span> Exportar a PDF
                 </button>
                 <button class="btn btn-link" onclick="selectElementContents(document.getElementById('grillIssues'))">
                     <span class="glyphicon glyphicon-share"></span> Copiar Reporte
                 </button>
-                <table id="grillIssues" class="table table-striped table-bordered table-condensed table-hover" style="height: 400px;" fixed-header>
+                <hr>
+                <table id="grillIssues" class="table table-striped table-bordered table-condensed table-hover">
                     <thead>
                         <tr>
                             <th>No. de Parrilla</th>
@@ -33,9 +47,9 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr ng-repeat-start="grillIssue in grillIssues">
+                        <tr ng-repeat-start="grillIssue in grillIssues | filter:searchGrillIssueReport">
                             <td colspan="3"><b>Remision: </b>{{grillIssue.Remission}}</td>
-                            <td colspan="3"><b>Fecha de Captura: </b>:{{grillIssue.DateCapture}}</td>
+                            <td colspan="4"><b>Fecha de Captura: </b>:{{grillIssue.DateCapture | date:'dd/MM/yyyy HH:mm'}}</td>
                             <td colspan="3"><b>Camion: </b>{{grillIssue.Truck}}</td>
                             <td colspan="3"><b>Conductor: </b>{{grillIssue.Driver}}</td>
                             <td colspan="3"><b>Caja:</b>{{grillIssue.Box}}</td>
