--- a/app/views/report/grill/reportingProcess.html
+++ b/app/views/report/grill/reportingProcess.html
@@ -5,6 +5,18 @@
         </div>
         <div class="card-body card-padding">
             <div class="table-responsive">
+                <div class="row">
+                    <div class="col-sm-12 actionbar">
+                        <div class="form-group">
+                            <label for="isearch" class="col-sm-2 control-label">Buscar</label>
+                            <div class="col-sm-12">
+                                <div class="fg-line">
+                                    <input type="text" class="form-control input-sm" id="isearch" placeholder="buscar...." data-ng-model="searchReportingProcess">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <hr>
                 <button class="btn btn-link" ng-click="reportingProcessExportPdf()">
                     <span class="glyphicon glyphicon-share"></span> Exportar PDF
@@ -12,7 +24,9 @@
                 <button class="btn btn-link" value="select genericReport" onclick="selectElementContents(document.getElementById('reportingProcess'))">
                     <span class="glyphicon glyphicon-share"></span> Copiar Reporte
             </button>
-                <table id="reportingProcess" class="table table-striped table-bordered table-condensed table-hover" style="height: 400px;" fixed-header>
+                <hr>
+                <table id="reportingProcess" class="table table-striped table-bordered table-condensed table-hover" style="height: 400px;"
+                    fixed-header>
                     <thead>
                         <tr>
                             <th>Variedad</th>
@@ -32,7 +46,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr ng-repeat="report in reportingProcess">
+                        <tr ng-repeat="report in reportingProcess | filter:searchReportingProcess">
                             <td>{{report.Variety}}</td>
                             <td>{{report.SacksFirstSmall}}</td>
                             <td>{{report.SacksFirstMedium}}</td>
