--- a/app/views/report/reportOrigin.html
+++ b/app/views/report/reportOrigin.html
@@ -5,6 +5,18 @@
         </div>
         <div class="card-body card-padding">
             <div class="table-responsive">
+                <div class="row">
+                    <div class="col-sm-12 actionbar">
+                        <div class="form-group">
+                            <label for="isearch" class="col-sm-2 control-label">Buscar</label>
+                            <div class="col-sm-12">
+                                <div class="fg-line">
+                                    <input type="text" class="form-control input-sm" id="isearch" placeholder="buscar...." data-ng-model="searchReport">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <hr>
                 <button class="btn btn-link" ng-click="originReportExportPdf()">
                     <span class="glyphicon glyphicon-share"></span> Exportar PDF
@@ -12,10 +24,12 @@
                 <button class="btn btn-link" value="select genericReport" onclick="selectElementContents(document.getElementById('originReportTable'))">
                     <span class="glyphicon glyphicon-share"></span> Copiar Reporte
                 </button>
-                <table id="originReportTable" class="table table-striped table-bordered table-condensed table-hover" style="height: 400px;" fixed-header>
+                <hr>
+                <table id="originReportTable" class="table table-striped table-bordered table-condensed table-hover" style="height: 400px;"
+                    fixed-header>
                     <thead>
                         <tr>
-                            <th rowspan="2">Huerta</th>
+                            <th rowspan="2">Huerta/Lote</th>
                             <th rowspan="2">Hectareas</th>
                             <th ng-repeat="variety in reportOriginFirst.Varieties">{{variety.Variety}}(Sacos)</th>
                             <th rowspan="2">Produccion Total</th>
@@ -24,8 +38,8 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr ng-repeat="report in reportOrigin">
-                            <td>{{report.Field}}</td>
+                        <tr ng-repeat="report in reportOrigin | filter:searchReport">
+                            <td>{{report.Batch}}</td>
                             <td>{{report.Hectares}}</td>
                             <td ng-repeat="variety in report.Varieties">{{variety.Total}}</td>
                             <td>{{report.TotalProduction}}</td>
