--- a/app/views/processResult/processResultAdd.html
+++ b/app/views/processResult/processResultAdd.html
@@ -33,7 +33,7 @@
                         <tr ng-repeat="receptionEntry in receptionEntries | filter:searchReceptionEntry">
                             <td>{{receptionEntry.Id}}</td>
                             <td>{{receptionEntry.Receptions}}</td>
-                            <td>{{receptionEntry.DateEntry | date:'dd/MM/yyyy HH:mm'}}</td>
+                            <td>{{receptionEntry.EntryDate | date:'dd/MM/yyyy HH:mm'}}</td>
                             <td>{{receptionEntry.Variety}}</td>
                             <td>{{receptionEntry.Producer}}</td>
                             <td>{{receptionEntry.Cylinder}}</td>
