--- a/app/views/harvestSeason.html
+++ b/app/views/harvestSeason.html
@@ -5,6 +5,18 @@
                 <h2>Alta de Temporadas</h2>
             </div>
             <div class="card-body card-padding">
+                <div ng-show="harvestSeasons.length === 0">
+                    <div class="alert alert-danger" role="alert">
+                        <p>
+                            <h3>!ATENCIÓN:</h5>
+                            <br>
+                            <h4>No hay temporadas en el sistema.</h4>
+                            <br>
+                            <p>Es necesario que agregue al menos una "Temporada" antes de poder continuar, esto debido a que
+                                la informacion que agregue posteriormente pertenecera a dicho elemento.</p>
+                        </p>
+                    </div>
+                </div>
                 <div class="form-group">
                     <label for="hname" class="col-sm-2 control-label">Nombre *</label>
                     <div class="col-sm-10">
@@ -82,8 +94,7 @@
                 <button class="btn btn-link" ng-click="generatePDF()">
                 <span class="glyphicon glyphicon-share"></span>Exportar PDF
             </button>
-                <table id="harvestSeasonTable" class="table table-striped table-bordered table-condensed table-hover" style="height: 400px;"
-                    fixed-header>
+                <table class="table table-striped table-bordered table-condensed table-hover">
                     <thead>
                         <tr>
                             <th>Nombre</th>
@@ -95,10 +106,10 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr ng-repeat="harvestSeason in harvestSeasons | filter:harvestSeasonForm">
+                        <tr ng-repeat="harvestSeason in harvestSeasons | filter:searchSeasons">
                             <td>{{harvestSeason.Name}}</td>
-                            <td>{{harvestSeason.EntryDate}}</td>
-                            <td>{{harvestSeason.IssueDate}}</td>
+                            <td>{{harvestSeason.EntryDate | date:'dd/MM/yyyy HH:mm'}}</td>
+                            <td>{{harvestSeason.IssueDate | date:'dd/MM/yyyy HH:mm'}}</td>
                             <td>{{harvestSeason.Description}}</td>
                             <td>
                                 <div class="toggle-switch">
