--- a/app/views/grill/grillAdd.html
+++ b/app/views/grill/grillAdd.html
@@ -78,7 +78,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="kilos" class="col-sm-2 control-label">Kilos *</label>
+                    <label for="kilos" class="col-sm-2 control-label">Kilos totales de la parrilla *</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
                             <input required type="number" min="1" class="form-control input-sm" id="kilos" name="Kilos" placeholder="kilos" data-ng-model="grill.Kilos">
