--- a/app/views/home.html
+++ b/app/views/home.html
@@ -16,19 +16,19 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-sm-4">
+    <div class="col-xs-12 col-md-8">
         <div class="card">
             <div id="acumulatedByProducer"></div>
         </div>
     </div>
-    <div class="col-sm-4">
-        <div class="card">
-            <div id="cylinderOccupiedHours"></div>
-        </div>
-    </div>
-    <div class="col-sm-4">
+    <div class="col-xs-6 col-md-4">
         <div class="card">
             <div id="percentageOfFirstAndSecond"></div>
         </div>
+    </div>
+</div>
+<div class="row">
+    <div class="card">
+        <div id="cylinderOccupiedHours"></div>
     </div>
 </div>
