--- a/app/views/humidity/humidityAdd.html
+++ b/app/views/humidity/humidityAdd.html
@@ -27,7 +27,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr ng-repeat="receptionEntry in humiditiesInReceptionEntry | filter:searchUser">
+                        <tr ng-repeat="receptionEntry in humiditiesInReceptionEntry | filter:searchReceptionEntries">
                             <td>{{receptionEntry.Cylinder}}</td>
                             <td>{{receptionEntry.Receptions}}</td>
                             <td>{{receptionEntry.EntryDate | date: 'dd/MM/yyyy HH:mm'}}</td>
