--- a/app/views/reception/receptionUpdate.html
+++ b/app/views/reception/receptionUpdate.html
@@ -6,6 +6,20 @@
             </div>
             <div class="card-body card-padding">
                 <div class="form-group">
+                    <label for="EntryDate" class="col-sm-2 control-label">Fecha *</label>
+                    <div class="col-sm-10">
+                        <div class="fg-line">
+                            <input type="text" required disabled class="form-control input-sm" id="EntryDate" placeholder="fecha de captura" value="{{ date | date: 'yyyy/MM/dd HH:mm' }}">
+                            <div class="dropdown">
+                                <a class="dropdown-toggle" id="dropdown1" role="button" data-toggle="dropdown" data-target href><i class="md md-event"></i></a>
+                                <ul class="dropdown-menu" role="menu">
+                                    <datetimepicker data-ng-model="date" data-datetimepicker-config="{ dropdownSelector: '#dropdown1' }" />
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
                     <label for="carRegistration" class="col-sm-2 control-label">Camion/Placas *</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
