se cambio boton principal por uno acorde al tema

--- a/app/views/field/field.html
+++ b/app/views/field/field.html
@@ -19,7 +19,7 @@
                         </div>
                         <div class="form-group">
                             <div class="col-sm-offset-2 col-sm-10">
-                                <button type="submit" class="btn btn-primary btn-sm" data-ng-click="saveField(fieldName)" ng-disabled="!fieldForm.$valid">Guardar</button>
+                                <button type="submit" class="btn bgm-teal waves-effect" data-ng-click="saveField(fieldName)" ng-disabled="!fieldForm.$valid">Guardar</button>
                             </div>
                         </div>
                     </form>
@@ -69,7 +69,7 @@
                         </div>
                         <div class="form-group">
                             <div class="col-sm-offset-2 col-sm-10">
-                                <button type="submit" class="btn btn-primary btn-sm" data-ng-click="saveBatch(batch)" ng-disabled="!batchForm.$valid">Guardar</button>
+                                <button type="submit" class="btn bgm-teal waves-effect" data-ng-click="saveBatch(batch)" ng-disabled="!batchForm.$valid">Guardar</button>
                             </div>
                         </div>
                         <div class="form-group">
@@ -107,7 +107,7 @@
                         </div>
                         <div class="form-group">
                             <div class="col-sm-offset-2 col-sm-10">
-                                <button type="submit" class="btn btn-primary btn-sm" data-ng-click="saveBox(box)" ng-disabled="!boxForm.$valid">Guardar</button>
+                                <button type="submit" class="btn bgm-teal waves-effect" data-ng-click="saveBox(box)" ng-disabled="!boxForm.$valid">Guardar</button>
                             </div>
                         </div>
                     </form>
