--- a/app/views/login.html
+++ b/app/views/login.html
@@ -23,7 +23,7 @@
       </div>
       <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-          <button type="submit" class="btn btn-primary btn-sm" data-ng-click="login()">Entrar</button>
+          <button type="submit" class="btn bgm-teal waves-effect" data-ng-click="login()">Entrar</button>
         </div>
       </div>
     </div>
