--- a/app/views/grill/grillAdd.html
+++ b/app/views/grill/grillAdd.html
@@ -96,7 +96,7 @@
                 </div>
                 <div class="form-group marginTop">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-primary btn-sm" data-ng-click="saveGrill(grill)" ng-disabled="!grillForm.$valid">Guardar</button>
+                        <button type="submit" class="btn bgm-teal waves-effect" data-ng-click="saveGrill(grill)" ng-disabled="!grillForm.$valid">Guardar</button>
                     </div>
                 </div>
             </div>
