--- a/app/views/grill/grillUpdate.html
+++ b/app/views/grill/grillUpdate.html
@@ -87,7 +87,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-primary btn-sm" data-ng-click="UpdateGrill(grill)" ng-disabled="!updateGrillForm.$valid">Actualizar</button>
+                        <button type="submit" class="btn bgm-teal waves-effect" data-ng-click="UpdateGrill(grill)" ng-disabled="!updateGrillForm.$valid">Actualizar</button>
                     </div>
                 </div>
             </div>
