--- a/app/views/humidity/humidityAddToCylinder.html
+++ b/app/views/humidity/humidityAddToCylinder.html
@@ -17,7 +17,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-primary btn-sm" data-ng-click="saveHumidity(humidityPercentage)" ng-disabled="!humidityForm.$valid">Guardar</button>
+                        <button type="submit" class="btn bgm-teal waves-effect" data-ng-click="saveHumidity(humidityPercentage)" ng-disabled="!humidityForm.$valid">Guardar</button>
                     </div>
                 </div>
             </div>
