--- a/app/views/processResult/processResult.html
+++ b/app/views/processResult/processResult.html
@@ -53,7 +53,7 @@
                 </div>
                 <div class="form-group marginTop">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-primary btn-sm" data-ng-click="saveProcessResult(processResult)">Guardar</button>
+                        <button type="submit" class="btn bgm-teal waves-effect" data-ng-click="saveProcessResult(processResult)">Guardar</button>
                     </div>
                 </div>
             </div>
