--- a/app/views/producersAndVarieties.html
+++ b/app/views/producersAndVarieties.html
@@ -19,7 +19,7 @@
                     </div>
                     <div class="form-group">
                         <div class="col-sm-offset-2 col-sm-10">
-                            <button type="submit" class="btn btn-primary btn-sm" data-ng-click="saveProducer(producerName)" ng-disabled="!producerForm.$valid">Guardar</button>
+                            <button type="submit" class="btn bgm-teal waves-effect" data-ng-click="saveProducer(producerName)" ng-disabled="!producerForm.$valid">Guardar</button>
                         </div>
                     </div>
                 </div>
@@ -66,7 +66,7 @@
                     </div>
                     <div class="form-group">
                         <div class="col-sm-offset-2 col-sm-10">
-                            <button type="submit" class="btn btn-primary btn-sm" data-ng-click="saveVariety(variety)" ng-disabled="!varietyForm.$valid">Guardar</button>
+                            <button type="submit" class="btn bgm-teal waves-effect" data-ng-click="saveVariety(variety)" ng-disabled="!varietyForm.$valid">Guardar</button>
                         </div>
                     </div>
                 </div>
