--- a/app/views/reception/receptionAdd.html
+++ b/app/views/reception/receptionAdd.html
@@ -48,7 +48,7 @@
                 </div>
                 <div class="form-group">
                     <div class="fg-line" style="margin-top: 20px;">
-                        <button type="submit" class="btn btn-primary btn-sm pull-right" ng-click="addReception(reception)" ng-disabled="!receptionForm.$valid">Agregar</button>
+                        <button type="submit" class="btn bgm-teal waves-effect pull-right" ng-click="addReception(reception)" ng-disabled="!receptionForm.$valid">Agregar</button>
                     </div>
                 </div>
             </div>
@@ -131,7 +131,7 @@
             </div>
             <div class="">
                 <div class="fg-line" style="margin-top: 20px;">
-                    <button type="submit" class="btn btn-primary btn-sm pull-right" ng-click="saveReceptionEntry(receptionEntry)">Guardar</button>
+                    <button type="submit" class="btn bgm-teal waves-effect pull-right" ng-click="saveReceptionEntry(receptionEntry)">Guardar</button>
                 </div>
             </div>
         </div>
