--- a/app/views/reception/receptionUpdate.html
+++ b/app/views/reception/receptionUpdate.html
@@ -53,7 +53,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-primary btn-sm" data-ng-click="updateReception(receptionUpdateModel)" ng-disabled="!updateReceptionForm.$valid">Actualizar</button>
+                        <button type="submit" class="btn bgm-teal waves-effect" data-ng-click="updateReception(receptionUpdateModel)" ng-disabled="!updateReceptionForm.$valid">Actualizar</button>
                     </div>
                 </div>
             </div>
