--- a/app/views/remission/remissionAdd.html
+++ b/app/views/remission/remissionAdd.html
@@ -116,7 +116,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-primary btn-sm" data-ng-click="saveRemission(remission)" ng-disabled="!remissionForm.$valid">Guardar</button>
+                        <button type="submit" class="btn bgm-teal waves-effect" data-ng-click="saveRemission(remission)" ng-disabled="!remissionForm.$valid">Guardar</button>
                     </div>
                 </div>
             </div>
