--- a/app/views/report/dailyReport.html
+++ b/app/views/report/dailyReport.html
@@ -21,7 +21,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-primary btn-sm" data-ng-click="getDailyProcessReport(data.dateDropDownLink)">Generar Reporte</button>
+                        <button type="submit" class="btn bgm-teal waves-effect" data-ng-click="getDailyProcessReport(data.dateDropDownLink)">Generar Reporte</button>
                     </div>
                 </div>
             </div>
