--- a/app/views/sampling/samplingUpdate.html
+++ b/app/views/sampling/samplingUpdate.html
@@ -71,7 +71,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-primary btn-sm" ng-click="UpdateSampling(sampling)" ng-disabled="!updateSamplingForm.$valid">Actualizar</button>
+                        <button type="submit" class="btn bgm-teal waves-effect" ng-click="UpdateSampling(sampling)" ng-disabled="!updateSamplingForm.$valid">Actualizar</button>
                     </div>
                 </div>
             </div>
