--- a/app/views/userProfile.html
+++ b/app/views/userProfile.html
@@ -50,7 +50,7 @@
                     </div>
                     <div class="form-group">
                         <div class="col-sm-offset-2 col-sm-10">
-                            <button type="submit" class="btn btn-primary btn-sm" data-ng-click="changePass(changePass)" ng-disabled="!userProfileForm.$valid">Guardar</button>
+                            <button type="submit" class="btn bgm-teal waves-effect" data-ng-click="changePass(changePass)" ng-disabled="!userProfileForm.$valid">Guardar</button>
                         </div>
                     </div>
                 </div>
