--- a/app/views/users.html
+++ b/app/views/users.html
@@ -57,7 +57,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-primary btn-sm" data-ng-click="signUp(registration)" ng-disabled="!userForm.$valid">Enviar</button>
+                        <button type="submit" class="btn bgm-teal waves-effect" data-ng-click="signUp(registration)" ng-disabled="!userForm.$valid">Enviar</button>
                     </div>
                 </div>
             </div>
