Se cambia el id de parrilla por el numero de folio en el muestreo

--- a/app/views/sampling/samplingGrillManage.html
+++ b/app/views/sampling/samplingGrillManage.html
@@ -34,7 +34,7 @@
                     </thead>
                     <tbody>
                         <tr ng-repeat="sampling in samplings | filter:searchGrillSampling">
-                            <td>{{sampling.GrillId}}</td>
+                            <td>{{sampling.Folio}}</td>
                             <td>{{sampling.DateCapture | date:'dd/MM/yyyy HH:mm'}}</td>
                             <td>{{sampling.SampleWeight}}</td>
                             <td>{{sampling.HumidityPercent}}</td>
