--- a/app/views/grill/grillCurrentInv.html
+++ b/app/views/grill/grillCurrentInv.html
@@ -19,7 +19,7 @@
                 <button class="btn btn-link" ng-click="generatePDFCurrent()">
                 <span class="glyphicon glyphicon-share"></span>Exportar PDF
             </button>
-                <table id="grillCurrentInvTable" class="table table-striped table-bordered table-condensed table-hover" style="height: 400px;" fixed-header>
+                <table id="grillCurrentInvTable" class="table table-striped table-bordered table-condensed table-hover" style="height: 70em;" fixed-header>
                     <thead>
                         <tr>
                             <th>No. de Parilla</th>
