--- a/app/views/grill/grillManage.html
+++ b/app/views/grill/grillManage.html
@@ -47,7 +47,7 @@
                 <button class="btn btn-link" ng-click="generatePDF()">
                 <span class="glyphicon glyphicon-share"></span>Exportar PDF
             </button>
-                <table id="grillManageTable" class="table table-striped table-bordered table-condensed table-hover" style="height: 400px;" fixed-header>
+                <table id="grillManageTable" class="table table-striped table-bordered table-condensed table-hover" style="height: 70em" fixed-header>
                     <thead>
                         <tr>
                             <th>No. de Parrilla</th>
@@ -59,7 +59,6 @@
                             <th>Calidad</th>
                             <th>Variedad</th>
                             <th>Productor</th>
-                            <th>Huerta/Lote</th>
                             <th>Peso de la Muestra</th>
                             <th>Humedad</th>
                             <th>No.Nueces por Kilo</th>
@@ -80,7 +79,6 @@
                             <td>{{grill.Quality}}</td>
                             <td>{{grill.Variety}}</td>
                             <td>{{grill.Producer}}</td>
-                            <td>{{grill.Batch}}</td>
                             <td>{{grill.SampleWeight}}</td>
                             <td>{{grill.HumidityPercent}}</td>
                             <td>{{grill.WalnutNumber}}</td>
