--- a/app/views/home.html
+++ b/app/views/home.html
@@ -27,7 +27,7 @@
         </div>
     </div>
 </div>
-<div class="row">
+<div class="row-fluid">
     <div class="card">
         <div id="cylinderOccupiedHours"></div>
     </div>
