--- a/app/views/humidity/humidityLastSamplings.html
+++ b/app/views/humidity/humidityLastSamplings.html
@@ -14,7 +14,7 @@
                         </div>
                     </div>
                 </div>
-                <table id="data-table-command" class="table table-striped table-bordered table-condensed table-hover" style="height: 400px;" fixed-header>
+                <table id="data-table-command" class="table table-striped table-bordered table-condensed table-hover" style="height: 70em;" fixed-header>
                     <thead>
                         <tr>
                             <td>Cilindro</td>
@@ -28,7 +28,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr ng-repeat="humidity in humiditiesInReceptionEntry | filter:searchHumities | orderBy:DateCapture">
+                        <tr ng-repeat="humidity in humiditiesInReceptionEntry | filter:searchHumities | orderBy: 'CylinderName'">
                             <td>{{humidity.CylinderName}}</td>
                             <td>{{humidity.FieldName}}</td>
                             <td>{{humidity.Tons}}</td>
