--- a/app/views/humidity/humidityManage.html
+++ b/app/views/humidity/humidityManage.html
@@ -18,7 +18,7 @@
                 <button class="btn btn-link" ng-click="generatePDF()">
                 <span class="glyphicon glyphicon-share"></span>Exportar PDF
             </button>
-                <table id="data-table-command" class="table table-striped table-bordered table-condensed table-hover" style="height: 400px;" fixed-header>
+                <table id="data-table-command" class="table table-striped table-bordered table-condensed table-hover" style="height: 70em;" fixed-header>
                     <thead>
                         <tr>
                             <td>Cilindro</td>
@@ -32,7 +32,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr ng-repeat="humidity in humiditiesInReceptionEntry | filter:searchHumities | orderBy:DateCapture">
+                        <tr ng-repeat="humidity in humiditiesInReceptionEntry | filter:searchHumities | orderBy: 'CylinderName'">
                             <td>{{humidity.CylinderName}}</td>
                             <td>{{humidity.FieldName}}</td>
                             <td>{{humidity.Tons}}</td>
