--- a/app/views/producersAndVarieties.html
+++ b/app/views/producersAndVarieties.html
@@ -94,7 +94,7 @@
                     <button class="btn btn-link" ng-click="generateProducersPDF()">
                     <span class="glyphicon glyphicon-share"></span>Exportar PDF
                 </button>
-                    <table id="producerTable" class="table table-striped table-bordered table-condensed table-hover" style="height: 400px;" fixed-header>
+                    <table id="producerTable" class="table table-striped table-bordered table-condensed table-hover" style="height: 70em;" fixed-header>
                         <thead>
                             <tr>
                                 <th data-column-id="id">Nombre</th>
@@ -137,7 +137,7 @@
                     <button class="btn btn-link" ng-click="generateVarietiesPDF()">
                     <span class="glyphicon glyphicon-share"></span>Exportar PDF
                 </button>
-                    <table id="varietyTable" class="table table-striped table-bordered table-condensed table-hover" style="height: 400px;" fixed-header>
+                    <table id="varietyTable" class="table table-striped table-bordered table-condensed table-hover" style="height: 70em;" fixed-header>
                         <thead>
                             <tr>
                                 <th data-column-id="id">Nombre</th>
