--- a/app/views/report/producerReport.html
+++ b/app/views/report/producerReport.html
@@ -43,7 +43,7 @@
                     <span class="glyphicon glyphicon-share"></span> Copiar Reporte
             </button>
                 <hr>
-                <table id="producerReport" class="table table-striped table-bordered table-condensed table-hover" style="height: 400px;"
+                <table id="producerReport" class="table table-striped table-bordered table-condensed table-hover" style="height: 70em;"
                     fixed-header>
                     <thead>
                         <tr>
