--- a/app/views/report/reportOrigin.html
+++ b/app/views/report/reportOrigin.html
@@ -25,7 +25,7 @@
                     <span class="glyphicon glyphicon-share"></span> Copiar Reporte
                 </button>
                 <hr>
-                <table id="originReportTable" class="table table-striped table-bordered table-condensed table-hover" style="height: 400px;"
+                <table id="originReportTable" class="table table-striped table-bordered table-condensed table-hover" style="height: 70em;"
                     fixed-header>
                     <thead>
                         <tr>
