se agrego direccionamiento a la captura y muestreo de parrillas

--- a/app/views/grill/grillManage.html
+++ b/app/views/grill/grillManage.html
@@ -102,7 +102,7 @@
                                     title="Agregar folio de recepcion">
                                 <i class="md md-assignment"></i>
                             </button>
-                            <button ng-show="grill.SampleWeight == ''" class="btn btn-default" ng-click="redirectAddSampling(grill.Id)" data-toggle="tooltip"
+                            <button ng-show="grill.SampleWeight == ''" class="btn btn-default" ng-click="redirectAddSampling(grill.Id, grill.Folio)" data-toggle="tooltip"
                                     data-placement="bottom" title="Agregar muestreo">
                                     <i class="md md-description"></i>
                             </button>
