--- a/app/views/grill/grillAdd.html
+++ b/app/views/grill/grillAdd.html
@@ -83,6 +83,16 @@
                         <button type="submit" class="btn bgm-teal waves-effect" data-ng-click="saveGrill(grill)" ng-disabled="!grillForm.$valid">Guardar</button>
                     </div>
                 </div>
+                <div class="form-group marginTop">
+                    <div class="col-sm-offset-2 col-sm-10">
+                        <button type="submit" class="btn bgm-blue waves-effect" data-ng-click="saveGrill(grill, 1)" ng-disabled="!grillForm.$valid">Guardar y Agregar Muestreo</button>
+                    </div>
+                </div>
+                <div class="form-group marginTop">
+                    <div class="col-sm-offset-2 col-sm-10">
+                        <button type="submit" class="btn bgm-bluegray waves-effect" data-ng-click="saveGrill(grill, 2)" ng-disabled="!grillForm.$valid">Guardar y Asignar Folio/s</button>
+                    </div>
+                </div>
             </div>
         </form>
     </div>
