--- a/app/views/reception/receptionManage.html
+++ b/app/views/reception/receptionManage.html
@@ -46,6 +46,8 @@
                 <hr>
                 <button class="btn btn-link" ng-click="generatePDF()">
                 <span class="glyphicon glyphicon-share"></span>Exportar PDF
+                </button>
+                <button class="btn btn-success waves-effect" ng-if="IsGrillToReception" ng-click="redirectAddGrill()">Agregar Nueva Parrilla</button>
             </button>
                 <table id="receptionTable" class="table table-striped table-bordered table-condensed table-hover" style="height: 70em;" fixed-header>
                     <thead>
