se agrego campo a reporte de Origen se corrigio error al mostrar el id en parrillas y muestreos

--- a/app/views/grill/grillCurrentInv.html
+++ b/app/views/grill/grillCurrentInv.html
@@ -58,7 +58,7 @@
                             <td>{{grill.Performance}}</td>
                             <td>{{grill.TotalWeightOfEdibleNuts}}</td>
                             <td>
-                                <button class="btn btn-default" ng-click="confirmationDelete(grill.Id)" data-toggle="tooltip" data-placement="bottom" title="Eliminar">
+                                <button class="btn btn-default" ng-click="confirmationDelete(grill.Id, grill.Folio)" data-toggle="tooltip" data-placement="bottom" title="Eliminar">
                                 <i class="md md-delete"></i>
                             </button>
                                 </button>
