--- a/app/views/sampling/samplingGrillManage.html
+++ b/app/views/sampling/samplingGrillManage.html
@@ -45,7 +45,7 @@
                                 <button class="btn btn-default" ng-click="redirectUpdate(sampling)">
                         <i class="md md-edit"></i>
                     </button>
-                                <button class="btn btn-default" ng-click="confirmationDeleteGrill(sampling.Id)">
+                                <button class="btn btn-default" ng-click="confirmationDeleteGrill(sampling.Id, sampling.Folio)">
                         <i class="md md-delete"></i>
                     </button>
                             </td>
